--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 	<!-- <link rel="stylesheet" href="./css/owl.carousel.css"> -->
 
 	<link rel="stylesheet" href="./css/post.css">
-	<link rel="stylesheet" href="./css/overlay.css">
+	<!-- <link rel="stylesheet" href="./css/overlay.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./css/flag.css">
 
@@ -37,7 +37,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbar">
 						<ul class="nav flex-column">
-							<li class="nav-item"><a class="nav-link-cut" href="./country/Argentina.html"><i class="flag flag-AR"></i>Argentina</a></li>
+							<li class="nav-item"><a class="menu" href="./country/Argentina.html"><i class="flag flag-AR"></i>Argentina</a></li>
 							<li class="nav-item"><a class="nav-link-cut" href="./country/Australia.html"><i class="flag flag-AU"></i>Australia</a></li>
 							<li class="nav-item"><a class="nav-link-cut" href="./country/Austria.html"><i class="flag flag-AT"></i>Austria</a></li>
 							<li class="nav-item"><a class="nav-link-cut" href="./country/Azerbaijan.html"><i class="flag flag-AZ"></i>Azerbaijan</a></li>
