--- a/country/Belarus-2.html
+++ b/country/Belarus-2.html
@@ -189,7 +189,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-2.html"><b>2</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-5.html">5</a></li>
