--- a/country/China-7.html
+++ b/country/China-7.html
@@ -196,7 +196,7 @@
             <li class="page-item"><a class="page-link" href="./China-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./China-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./China-6.html">6</a></li>
-            <li class="page-item"><a class="page-link" href="./China-7.html"><b>7</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./China-7.html"><b>7</b></a></li>
             <li class="page-item"><a class="page-link" href="./China-8.html">8</a></li>
             <li class="page-item"><a class="page-link" href="./China-9.html">9</a></li>
             <li class="page-item"><a class="page-link" href="./China-8.html">Next</a></li>
