--- a/country/China-8.html
+++ b/country/China-8.html
@@ -197,7 +197,7 @@
             <li class="page-item"><a class="page-link" href="./China-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./China-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./China-7.html">7</a></li>
-            <li class="page-item"><a class="page-link" href="./China-8.html"><b>8</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./China-8.html"><b>8</b></a></li>
             <li class="page-item"><a class="page-link" href="./China-9.html">9</a></li>
             <li class="page-item"><a class="page-link" href="./China-9.html">Next</a></li>
           </ul>
