--- a/country/Czechia-2.html
+++ b/country/Czechia-2.html
@@ -191,7 +191,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Czechia-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Czechia-2.html"><b>2</b></a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-5.html">5</a></li>
