--- a/country/Czechia-5.html
+++ b/country/Czechia-5.html
@@ -194,7 +194,7 @@
             <li class="page-item"><a class="page-link" href="./Czechia-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-4.html">4</a></li>
-            <li class="page-item"><a class="page-link" href="./Czechia-5.html"><b>5</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Czechia-5.html"><b>5</b></a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-6.html">Next</a></li>
