--- a/country/Czechia-6.html
+++ b/country/Czechia-6.html
@@ -195,7 +195,7 @@
             <li class="page-item"><a class="page-link" href="./Czechia-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-5.html">5</a></li>
-            <li class="page-item"><a class="page-link" href="./Czechia-6.html"><b>6</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Czechia-6.html"><b>6</b></a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-7.html">Next</a></li>
           </ul>
