--- a/country/Finland-3.html
+++ b/country/Finland-3.html
@@ -192,7 +192,7 @@
             <li class="page-item"><a class="page-link" href="./Finland-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Finland.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Finland-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Finland-3.html"><b>3</b></a></li>
             <li class="page-item"><a class="page-link" href="./Finland-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-6.html">6</a></li>
