--- a/country/Finland-8.html
+++ b/country/Finland-8.html
@@ -136,7 +136,7 @@
             <li class="page-item"><a class="page-link" href="./Finland-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-7.html">7</a></li>
-            <li class="page-item"><a class="page-link" href="./Finland-8.html"><b>8</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Finland-8.html"><b>8</b></a></li>
           </ul>
         </nav>
     </div>
