--- a/country/Germany-14.html
+++ b/country/Germany-14.html
@@ -196,7 +196,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-11.html">11</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-12.html">12</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-13.html">13</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-14.html"><b>14</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-14.html"><b>14</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-15.html">15</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-16.html">16</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-17.html">17</a></li>
