--- a/country/Germany-19.html
+++ b/country/Germany-19.html
@@ -201,7 +201,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-16.html">16</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-17.html">17</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-18.html">18</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-19.html"><b>19</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-19.html"><b>19</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-20.html">20</a></li>
             <li class="page-item"><a class="page-link" href="#">…</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-26.html">26</a></li>
