--- a/country/Hong_Kong.html
+++ b/country/Hong_Kong.html
@@ -188,7 +188,7 @@
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-            <li class="page-item"><a class="page-link" href="./Hong_Kong.html"><b>1</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Hong_Kong.html"><b>1</b></a></li>
             <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Hong_Kong-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">Next</a></li>
