--- a/country/Australia-2.html
+++ b/country/Australia-2.html
@@ -189,7 +189,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Australia.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Australia.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Australia-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Australia-2.html"><b>2</b></a></li>
             <li class="page-item"><a class="page-link" href="./Australia-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Australia-3.html">Next</a></li>
           </ul>
