--- a/country/Australia-3.html
+++ b/country/Australia-3.html
@@ -148,7 +148,7 @@
             <li class="page-item"><a class="page-link" href="./Australia-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Australia.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Australia-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Australia-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Australia-3.html"><b>3</b></a></li>
           </ul>
         </nav>
     </div>
