--- a/country/Belarus-10.html
+++ b/country/Belarus-10.html
@@ -186,7 +186,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-8.html">8</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-9.html">9</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-10.html"><b>10</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-10.html"><b>10</b></a></li>
           </ul>
         </nav>
     </div>
