--- a/country/Belarus-3.html
+++ b/country/Belarus-3.html
@@ -190,7 +190,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-3.html"><b>3</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-6.html">6</a></li>
