--- a/country/Belarus-4.html
+++ b/country/Belarus-4.html
@@ -192,7 +192,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-4.html"><b>4</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-4.html"><b>4</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-7.html">7</a></li>
