--- a/country/Belarus-5.html
+++ b/country/Belarus-5.html
@@ -194,7 +194,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-4.html">4</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-5.html"><b>5</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-5.html"><b>5</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-8.html">8</a></li>
