--- a/country/Belarus-7.html
+++ b/country/Belarus-7.html
@@ -196,7 +196,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-6.html">6</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-7.html"><b>7</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-7.html"><b>7</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-8.html">8</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-9.html">9</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-10.html">10</a></li>
