--- a/country/Belarus-8.html
+++ b/country/Belarus-8.html
@@ -197,7 +197,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-7.html">7</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-8.html"><b>8</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-8.html"><b>8</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-9.html">9</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-10.html">10</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-9.html">Next</a></li>
