--- a/country/Belarus-9.html
+++ b/country/Belarus-9.html
@@ -198,7 +198,7 @@
             <li class="page-item"><a class="page-link" href="./Belarus-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-8.html">8</a></li>
-            <li class="page-item"><a class="page-link" href="./Belarus-9.html"><b>9</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Belarus-9.html"><b>9</b></a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-10.html">10</a></li>
             <li class="page-item"><a class="page-link" href="./Belarus-10.html">Next</a></li>
           </ul>
