--- a/country/Brazil-2.html
+++ b/country/Brazil-2.html
@@ -124,7 +124,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Brazil.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Brazil.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Brazil-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Brazil-2.html"><b>2</b></a></li>
           </ul>
         </nav>
     </div>
