--- a/country/Canada-3.html
+++ b/country/Canada-3.html
@@ -138,7 +138,7 @@
             <li class="page-item"><a class="page-link" href="./Canada-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Canada.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Canada-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Canada-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Canada-3.html"><b>3</b></a></li>
           </ul>
         </nav>
     </div>
