--- a/country/China-2.html
+++ b/country/China-2.html
@@ -191,7 +191,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./China.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./China.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./China-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./China-2.html"><b>2</b></a></li>
             <li class="page-item"><a class="page-link" href="./China-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./China-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./China-5.html">5</a></li>
