--- a/country/China-4.html
+++ b/country/China-4.html
@@ -193,7 +193,7 @@
             <li class="page-item"><a class="page-link" href="./China.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./China-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./China-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="./China-4.html"><b>4</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./China-4.html"><b>4</b></a></li>
             <li class="page-item"><a class="page-link" href="./China-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./China-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./China-7.html">7</a></li>
