--- a/country/China-9.html
+++ b/country/China-9.html
@@ -174,7 +174,7 @@
             <li class="page-item"><a class="page-link" href="./China-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./China-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./China-8.html">8</a></li>
-            <li class="page-item"><a class="page-link" href="./China-9.html"><b>9</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./China-9.html"><b>9</b></a></li>
           </ul>
         </nav>
     </div>
