--- a/country/Czechia-4.html
+++ b/country/Czechia-4.html
@@ -193,7 +193,7 @@
             <li class="page-item"><a class="page-link" href="./Czechia.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="./Czechia-4.html"><b>4</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Czechia-4.html"><b>4</b></a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-7.html">7</a></li>
