--- a/country/Czechia-7.html
+++ b/country/Czechia-7.html
@@ -135,7 +135,7 @@
             <li class="page-item"><a class="page-link" href="./Czechia-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Czechia-6.html">6</a></li>
-            <li class="page-item"><a class="page-link" href="./Czechia-7.html"><b>7</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Czechia-7.html"><b>7</b></a></li>
           </ul>
         </nav>
     </div>
