--- a/country/Finland-2.html
+++ b/country/Finland-2.html
@@ -191,7 +191,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Finland.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Finland.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Finland-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Finland-2.html"><b>2</b></a></li>
             <li class="page-item"><a class="page-link" href="./Finland-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-5.html">5</a></li>
