--- a/country/Finland-6.html
+++ b/country/Finland-6.html
@@ -195,7 +195,7 @@
             <li class="page-item"><a class="page-link" href="./Finland-3.html">3</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-5.html">5</a></li>
-            <li class="page-item"><a class="page-link" href="./Finland-6.html"><b>6</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Finland-6.html"><b>6</b></a></li>
             <li class="page-item"><a class="page-link" href="./Finland-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-8.html">8</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-7.html">Next</a></li>
