--- a/country/Finland-7.html
+++ b/country/Finland-7.html
@@ -196,7 +196,7 @@
             <li class="page-item"><a class="page-link" href="./Finland-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-6.html">6</a></li>
-            <li class="page-item"><a class="page-link" href="./Finland-7.html"><b>7</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Finland-7.html"><b>7</b></a></li>
             <li class="page-item"><a class="page-link" href="./Finland-8.html">8</a></li>
             <li class="page-item"><a class="page-link" href="./Finland-8.html">Next</a></li>
           </ul>
