--- a/country/France-3.html
+++ b/country/France-3.html
@@ -192,7 +192,7 @@
             <li class="page-item"><a class="page-link" href="./France-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./France.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./France-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./France-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./France-3.html"><b>3</b></a></li>
             <li class="page-item"><a class="page-link" href="./France-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./France-4.html">Next</a></li>
           </ul>
