--- a/country/France-4.html
+++ b/country/France-4.html
@@ -156,7 +156,7 @@
             <li class="page-item"><a class="page-link" href="./France.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./France-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./France-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="./France-4.html"><b>4</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./France-4.html"><b>4</b></a></li>
           </ul>
         </nav>
     </div>
