--- a/country/Germany-10.html
+++ b/country/Germany-10.html
@@ -192,7 +192,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-9.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Germany.html">1</a></li>
             <li class="page-item"><a class="page-link" href="#">…</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-10.html"><b>10</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-10.html"><b>10</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-11.html">11</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-12.html">12</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-13.html">13</a></li>
