--- a/country/Germany-13.html
+++ b/country/Germany-13.html
@@ -194,7 +194,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-10.html">10</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-11.html">11</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-12.html">12</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-13.html"><b>13</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-13.html"><b>13</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-14.html">14</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-15.html">15</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-16.html">16</a></li>
