--- a/country/Germany-16.html
+++ b/country/Germany-16.html
@@ -198,7 +198,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-13.html">13</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-14.html">14</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-15.html">15</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-16.html"><b>16</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-16.html"><b>16</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-17.html">17</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-18.html">18</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-19.html">19</a></li>
