--- a/country/Germany-17.html
+++ b/country/Germany-17.html
@@ -199,7 +199,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-14.html">14</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-15.html">15</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-16.html">16</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-17.html"><b>17</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-17.html"><b>17</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-18.html">18</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-19.html">19</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-20.html">20</a></li>
