--- a/country/Germany-20.html
+++ b/country/Germany-20.html
@@ -192,7 +192,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-19.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Germany.html">1</a></li>
             <li class="page-item"><a class="page-link" href="#">…</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-20.html"><b>20</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-20.html"><b>20</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-21.html">21</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-22.html">22</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-23.html">23</a></li>
