--- a/country/Germany-23.html
+++ b/country/Germany-23.html
@@ -195,7 +195,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-20.html">20</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-21.html">21</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-22.html">22</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-23.html"><b>23</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-23.html"><b>23</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-24.html">24</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-25.html">25</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-26.html">26</a></li>
