--- a/country/Germany-24.html
+++ b/country/Germany-24.html
@@ -196,7 +196,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-21.html">21</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-22.html">22</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-23.html">23</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-24.html"><b>24</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-24.html"><b>24</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-25.html">25</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-26.html">26</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-25.html">Next</a></li>
