--- a/country/Germany-25.html
+++ b/country/Germany-25.html
@@ -197,7 +197,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-22.html">22</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-23.html">23</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-24.html">24</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-25.html"><b>25</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-25.html"><b>25</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-26.html">26</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-26.html">Next</a></li>
           </ul>
