--- a/country/Germany-26.html
+++ b/country/Germany-26.html
@@ -155,7 +155,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-23.html">23</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-24.html">24</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-25.html">25</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-26.html"><b>26</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-26.html"><b>26</b></a></li>
           </ul>
         </nav>
     </div>
