--- a/country/Germany-3.html
+++ b/country/Germany-3.html
@@ -191,7 +191,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Germany.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-3.html"><b>3</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-6.html">6</a></li>
