--- a/country/Germany-4.html
+++ b/country/Germany-4.html
@@ -193,7 +193,7 @@
             <li class="page-item"><a class="page-link" href="./Germany.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-4.html"><b>4</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-4.html"><b>4</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-7.html">7</a></li>
