--- a/country/Germany-7.html
+++ b/country/Germany-7.html
@@ -195,7 +195,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-4.html">4</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-5.html">5</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-6.html">6</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-7.html"><b>7</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-7.html"><b>7</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-8.html">8</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-9.html">9</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-10.html">10</a></li>
