--- a/country/Germany-9.html
+++ b/country/Germany-9.html
@@ -198,7 +198,7 @@
             <li class="page-item"><a class="page-link" href="./Germany-6.html">6</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-7.html">7</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-8.html">8</a></li>
-            <li class="page-item"><a class="page-link" href="./Germany-9.html"><b>9</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Germany-9.html"><b>9</b></a></li>
             <li class="page-item"><a class="page-link" href="./Germany-10.html">10</a></li>
             <li class="page-item"><a class="page-link" href="#">…</a></li>
             <li class="page-item"><a class="page-link" href="./Germany-26.html">26</a></li>
