--- a/country/Hong_Kong-3.html
+++ b/country/Hong_Kong-3.html
@@ -143,7 +143,7 @@
             <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Hong_Kong.html">1</a></li>
             <li class="page-item"><a class="page-link" href="./Hong_Kong-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="./Hong_Kong-3.html"><b>3</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Hong_Kong-3.html"><b>3</b></a></li>
           </ul>
         </nav>
     </div>
