--- a/country/India-2.html
+++ b/country/India-2.html
@@ -154,7 +154,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./India.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./India.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./India-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./India-2.html"><b>2</b></a></li>
           </ul>
         </nav>
     </div>
