--- a/country/Indonesia-2.html
+++ b/country/Indonesia-2.html
@@ -123,7 +123,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Indonesia.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Indonesia.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Indonesia-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Indonesia-2.html"><b>2</b></a></li>
           </ul>
         </nav>
     </div>
