--- a/country/Italy-2.html
+++ b/country/Italy-2.html
@@ -141,7 +141,7 @@
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
             <li class="page-item"><a class="page-link" href="./Italy.html">Previous</a></li>
             <li class="page-item"><a class="page-link" href="./Italy.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="./Italy-2.html"><b>2</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Italy-2.html"><b>2</b></a></li>
           </ul>
         </nav>
  </div>
