--- a/country/Italy.html
+++ b/country/Italy.html
@@ -187,7 +187,7 @@
         <nav style="padding-left: 10px; padding-top: 10px;">
           <ul class="pagination">
             <li class="page-item"><a class="page-link" href="./../index.html">Main Page</a></li>
-            <li class="page-item"><a class="page-link" href="./Italy.html"><b>1</b></a></li>
+            <li class="page-item active"><a class="page-link" href="./Italy.html"><b>1</b></a></li>
             <li class="page-item"><a class="page-link" href="./Italy-2.html">2</a></li>
             <li class="page-item"><a class="page-link" href="./Italy-2.html">Next</a></li>
           </ul>
